# teams-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: agent-contract.md
src/: cli.rs  config.rs  error.rs  main.rs
src/api/: chats.rs  client.rs  messages.rs  mod.rs
src/auth/: jwt.rs  mod.rs  oauth.rs  skype.rs  store.rs
src/commands/: alias.rs  cache.rs  debug.rs  list_chats.rs  login.rs  logout.rs  mod.rs  post.rs  read.rs  resolve.rs  search_chats.rs  send.rs  target.rs  whoami.rs
src/util/: chat_cache.rs  chat_ref.rs  fs.rs  json.rs  mod.rs  output.rs  rich_text.rs
tests/: agent_contract.rs
tools/: capture-teams-cdp.mjs  inspect-teams-indexeddb.mjs
